--- a/connect/index.html
+++ b/connect/index.html
@@ -1,52 +1,58 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Elasticsearch + Angular Example</title>
-  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <title>Elasticsearch + Angular Example</title>
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
-<!-- boot angular with the ExampleApp module -->
-<body ng-app="ExampleApp">
-  <!-- attach the ExampleController to our main content -->
-  <div ng-controller="ExampleController" class="container">
-    <h1>Angular + Elasticsearch</h1>
+<!-- boot angular with the ElasticVisualizerApp module -->
 
-    <!-- if there is an error, display its message -->
-    <div ng-if="error" class="alert alert-danger" role="alert">{{error.message}}</div>
-
-    <!-- if clusterState is available, display it as formatted json -->
-    <div ng-if="clusterState" class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Cluster State</h3>
-      </div>
-      <div class="panel-body">
-        <pre>{{clusterState | json}}</pre>
-      </div>
+<body ng-app="ElasticVisualizerApp">
+    <!-- attach the ElasticVisualizerController to our main content -->
+    <div ng-controller="ElasticVisualizerController" class="container">
+        <h1>Elasticsearch Visualizer</h1>
+        <!-- if there is an error, display its message -->
+        <div ng-if="error" class="alert alert-danger" role="alert">{{error.message}}</div>
+        <!-- if clusterState -->
+        <div ng-if="clusterState" class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Cluster State</h3>
+            </div>
+            <div class="panel-body">
+                <pre>{{clusterState | json}}</pre>
+            </div>
+        </div>
+        <div ng-if="docsCount" class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Document Count</h3>
+            </div>
+            <div class="panel-body">
+                <pre>{{docsCount | json}}</pre>
+            </div>
+        </div>
     </div>
-  </div>
-
-  <!-- include bower components in proper order -->
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/elasticsearch/elasticsearch.angular.js"></script>
-
-  <!-- app code starts is here -->
-  <script>
+    <!-- include bower components in proper order -->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/elasticsearch/elasticsearch.angular.js"></script>
+    <!-- app code starts is here -->
+    <script>
     // App module
     //
     // The app module will contain all of the components the app needs (directives,
     // controllers, services, etc.). Since it will be using the components within
     // the elasticsearch module, define it a dependency.
-    var ExampleApp = angular.module('ExampleApp', ['elasticsearch']);
+    var ElasticVisualizerApp = angular.module('ElasticVisualizerApp', ['elasticsearch']);
 
     // Service
     //
     // esFactory() creates a configured client instance. Turn that instance
     // into a service so that it can be required by other parts of the application
-    ExampleApp.service('client', function (esFactory) {
-      return esFactory({
-        host: 'localhost:9200',
-        apiVersion: '1.2',
-        log: 'trace'
-      });
+    ElasticVisualizerApp.service('client', function(esFactory) {
+        return esFactory({
+            host: '172.16.2.43:9200',
+            apiVersion: '1.2',
+            log: 'trace'
+        });
     });
 
     // Controller
@@ -56,34 +62,55 @@
     //
     // It also requires the esFactory to that it can check for a specific type of
     // error which might come back from the client
-    ExampleApp.controller('ExampleController', function ($scope, client, esFactory) {
+    ElasticVisualizerApp.controller('ElasticVisualizerController', function($scope, client, esFactory) {
 
-      client.cluster.state({
-        metric: [
-          'cluster_name',
-          'nodes',
-          'master_node',
-          'version'
-        ]
-      })
-      .then(function (resp) {
-        $scope.clusterState = resp;
-        $scope.error = null;
-      })
-      .catch(function (err) {
-        $scope.clusterState = null;
-        $scope.error = err;
+        // check cluster state
+        client.cluster.state({
+                metric: [
+                    'cluster_name',
+                    'nodes',
+                    'master_node',
+                    'version'
+                ]
+            })
+            .then(function(resp) {
+                $scope.clusterState = resp;
+                $scope.error = null;
+            })
+            .catch(function(err) {
+                $scope.clusterState = null;
+                $scope.error = err;
 
-        // if the err is a NoConnections error, then the client was not able to
-        // connect to elasticsearch. In that case, create a more detailed error
-        // message
-        if (err instanceof esFactory.errors.NoConnections) {
-          $scope.error = new Error('Unable to connect to elasticsearch. ' +
-            'Make sure that it is running and listening at http://localhost:9200');
-        }
-      });
+                // if the err is a NoConnections error, then the client was not able to
+                // connect to elasticsearch. In that case, create a more detailed error
+                // message
+                if (err instanceof esFactory.errors.NoConnections) {
+                    $scope.error = new Error('Unable to connect to elasticsearch. ' +
+                        'Make sure that it is running and listening at http://localhost:9200');
+                }
+            });
+
+
+        // Search for sample count
+        client.count({
+            index: 'insight-us',
+            type: 'job',
+            body: {
+                query: {
+                    match: {
+                        'location.state.criteria': 'CA'
+                    }
+                }
+            }
+        }).then(function(resp) {
+            $scope.docsCount = resp;
+            $scope.error = null;
+        }).catch(function(err) {
+            console.trace(err.message);
+        })
 
     });
-  </script>
+    </script>
 </body>
+
 </html>
