--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -52,7 +52,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   |---------------------------------------------------------|
   -->
 
-<body class="hold-transition skin-blue sidebar-mini sidebar-collapse">
+<body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
         <!-- Main Header -->
         <header class="main-header">
@@ -61,7 +61,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>Elastic</b>V</span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>Elatic</b>Visualizer</span>
+                <span class="logo-lg"><b>Elastic</b>Visualizer</span>
             </a>
             <!-- Header Navbar -->
             <nav class="navbar navbar-static-top" role="navigation">
@@ -228,7 +228,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <img src="dist/img/profile-160x160.jpg" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
-                        <p>Alexander Pierce</p>
+                        <p>Pandiyan Murugan</p>
                         <!-- Status -->
                         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                     </div>
