--- a/connect/index.html
+++ b/connect/index.html
@@ -49,7 +49,7 @@
     // into a service so that it can be required by other parts of the application
     ElasticVisualizerApp.service('client', function(esFactory) {
         return esFactory({
-            host: '172.16.2.43:9200',
+            host: 'localhost:9200',
             apiVersion: '1.2',
             log: 'trace'
         });
